--- a/tallerApp/templates/base/footer.html
+++ b/tallerApp/templates/base/footer.html
@@ -28,17 +28,17 @@
           </ul>
         
         </div>
-        <div class="footer-links text-bg-dark">
+        <!-- <div class="footer-links text-bg-dark">
         
           <h4>Tienda</h4>
           <ul>
-            <li><a href="{% url 'herramientas' %}">Herramientas</a></li>
-            <li><a href="{% url 'muebles' %}">Muebles</a></li>
-            <li><a href="{% url 'seguridad' %}">Seguridad</a></li>
-            <li><a href="{% url 'proteccion' %}">Proteccion</a></li>
+            <li><a href="">Herramientas</a></li>
+            <li><a href="">Muebles</a></li>
+            <li><a href="">Seguridad</a></li>
+            <li><a href="">Proteccion</a></li>
           </ul>
         
-        </div>
+        </div> -->
         <div class="footer-links text-bg-dark">
         
           <h4>Siguenos</h4>
@@ -55,8 +55,8 @@
             Moneda
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'moneda' 'CLP' %}">CLP</a></li>
-            <li><a class="dropdown-item" href="{% url 'moneda' 'USD' %}">USD</a></li>
+            <li><a class="dropdown-item" href="">CLP</a></li>
+            <li><a class="dropdown-item" href="">USD</a></li>
           </ul>
         </div>
 
