--- a/tallerApp/templates/base/carrousel.html
+++ b/tallerApp/templates/base/carrousel.html
@@ -8,13 +8,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{% static 'images/ferre1.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'images/taller1.jpeg' %}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/ferre2.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'images/taller2.webp' %}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/ferre3.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'images/taller3.jpg' %}" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
