--- a/tallerApp/templates/pages/index.html
+++ b/tallerApp/templates/pages/index.html
@@ -20,17 +20,17 @@
             {% include 'base/carrousel.html' %}
         </section>
         <!-- SECCION DE CATEGORIAS DESTACADAS -->
-        <section class="border border-warning-subtle text-bg-dark p-3">
+        <!- <section class="border border-warning-subtle text-bg-dark p-3">
             <h2 style="">Destacados</h2>
             <div class="container text-center">
                 <div class="row gap-3 justify-content-center">
 
                     <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
                         <div>
-                            <a class="titulo-noSub" href="{% url 'muebles' %}">
+                            <a class="titulo-noSub" href="">
                                 <div class="contenedor-item">
-                                    <img src="{% static 'images/12.jpg' %}" alt="">
-                                    <h3>Muebles</h3>
+                                    <img src="{% static 'images/bateria.webp' %}"  alt="">
+                                    <h3>Baterias</h3>
                                 </div>
                             </a>
                         </div>
@@ -38,10 +38,10 @@
     
                     <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
                         <div>
-                            <a class="titulo-noSub" href="{% url 'proteccion' %}">
+                            <a class="titulo-noSub" href="">
                                 <div class="contenedor-item">
-                                    <img src="{% static 'images/13.jpg' %}" alt="">
-                                    <h3>Proteccion Personal</h3>
+                                    <img src="{% static 'images/frenos.jpg' %}" style="width: 50px;" alt="">
+                                    <h3>Frenos</h3>
                                 </div>
                             </a>
                         </div>
@@ -49,10 +49,10 @@
     
                     <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
                         <div>
-                            <a class="titulo-noSub" href="{% url 'herramientas' %}">
+                            <a class="titulo-noSub" href="">
                                 <div class="contenedor-item">
-                                    <img src="{% static 'images/14.jpg' %}" alt="">
-                                    <h3>Herramientas</h3>
+                                    <img src="{% static 'images/Motores.webp' %}" style="width: 50px;" alt="">
+                                    <h3>Motores</h3>
                                 </div>
                             </a>
                         </div>
@@ -60,22 +60,22 @@
     
                     <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
                         <div>
-                            <a class="titulo-noSub" href="{% url 'seguridad' %}">
+                            <a class="titulo-noSub" href="">
                                 <div class="contenedor-item">
-                                    <img src="{% static 'images/15.jpg' %}" alt="">
-                                    <h3>Seguridad</h3>
+                                    <img src="{% static 'images/ruedas.webp' %}" style="width: 50px;" alt="">
+                                    <h3>Ruedas</h3>
                                 </div>
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Productos Herramientas -->
-        <section class="border border-warning-subtle text-bg-dark p-3">
-            <h2>Herramientas</h2>
+        <!-- <section class="border border-warning-subtle text-bg-dark p-3">
+            <h2>Ruedas</h2>
                 <div class="container-fluid row gap-5 justify-content-center">
-                    {% for p in herramientas %}
+                    {% for p in ruedas %}
                     <div class="col-10 col-md-6 col-lg-2">
                         <div class="card" style="width: auto;">
                             <img src="{{ p.imagen.url }}" class="card-img-top" alt="...">
@@ -86,9 +86,9 @@
                     </div>
                     {% endfor %}
                 </div>
-        </section>
+        </section> -->
         <!-- Productos Muebles-->
-        <section class="border border-warning-subtle text-bg-dark p-3">
+        <!-- <section class="border border-warning-subtle text-bg-dark p-3">
             <h2>Muebles</h2>
                 <div class="container-fluid row gap-5 justify-content-center">
                     {% for p in muebles %}
@@ -102,9 +102,9 @@
                     </div>
                     {% endfor %}
                 </div>
-        </section>
+        </section> -->
         <!-- Productos Seguridad-->
-        <section class="border border-warning-subtle text-bg-dark p-3">
+        <!-- <section class="border border-warning-subtle text-bg-dark p-3">
             <h2>Seguridad</h2>
                 <div class="container-fluid row gap-5 justify-content-center">
                     {% for p in seguridad %}
@@ -118,9 +118,9 @@
                     </div>
                     {% endfor %}
                 </div>
-        </section>
+        </section> -->
         <!-- Productos Proteccion-->
-        <section class="border border-warning-subtle text-bg-dark p-3">
+        <!-- <section class="border border-warning-subtle text-bg-dark p-3">
             <h2>Proteccion</h2>
                 <div class="container-fluid row gap-5 justify-content-center">
                     {% for p in proteccion %}
@@ -134,7 +134,7 @@
                     </div>
                     {% endfor %}
                 </div>
-        </section>
+        </section> -->
         {% include 'base/footer.html' %}
     </main>
     
