--- a/tallerApp/templates/pages/index.html
+++ b/tallerApp/templates/pages/index.html
@@ -29,7 +29,7 @@
                         <div>
                             <a class="titulo-noSub" href="">
                                 <div class="contenedor-item">
-                                    <img src="{% static 'images/bateria.webp' %}"  alt="">
+                                    <img src="{% static 'images/bateria.webp' %}" style="width: 50px;"  alt="">
                                     <h3>Baterias</h3>
                                 </div>
                             </a>
