--- a/tallerApp/templates/pages/inventario.html
+++ b/tallerApp/templates/pages/inventario.html
@@ -44,7 +44,7 @@
                         </tbody>
                     </table>
                     <div>
-                        <a href="{% url 'prod_add' %}"><button class="btn btn-primary">Agregar Producto</button></a>
+                        <a href="{% url 'prod_add' %}"><button class="btn btn-primary">Solicitar Productos</button></a>
 
                     </div>
                 </div>
