--- a/tallerApp/templates/pages/prod_add.html
+++ b/tallerApp/templates/pages/prod_add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregar producto</title>
+    <title>Solicitar productos</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/page.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-md-8 shadow-lg mx-auto text-center p-3" style="background-color: rgb(255, 248, 227);">
                     <h2 class="my-3">Formulario de registro</h2>
-                    <form action="{% url 'prod_add' %}" method="POST" class="fort-floating">
+                    <form action="{% url 'prod_add' %}" method="POST" class="fort-floating" enctype="multipart/form-data">
                         {% csrf_token %}
 
                         {% comment %} <div class="form-floating mb-3 w-50 mx-auto">
@@ -32,7 +32,7 @@
                                     <option value="{{tmp.id_categoria}}" {% if tmp.nombre_c == producto.id_categoria.categoria %}selected{% endif %}>
                                         {{tmp.nombre_c}}
                                     </option>
-                                {% endfor %}
+                                {% endfor %} imagen
                             </select>
                             <label for="categoria">Categoria</label>
                         </div>
@@ -43,6 +43,21 @@
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <input type="number" class="form-control" id="valor" name="valor">
                             <label for="valor" class="form-label">Valor</label>
+                        </div>
+
+                        <div class="form-floating mb-3 w-25 mx-auto">
+                            <input type="number" class="form-control" id="stock" name="stock">
+                            <label for="stock" class="form-label">Cantidad</label>
+                        </div>
+
+                        <!-- <div class="form-floating mb-3 w-25 mx-auto">
+                            <input type="file" class="form-control" id="imagen" name="imagen">
+                            <label for="imagen" class="form-label">Imagen</label>
+                        </div> -->
+
+                        <div class="form-floating mb-3 w-50 mx-auto">
+                            <input type="text" class="form-control" id="proveedor" name="proveedor">
+                            <label for="proveedor">proveedor</label>
                         </div>
                         <div>
                             {% if mensaje %}
