--- a/tallerApp/templates/pages/index.html
+++ b/tallerApp/templates/pages/index.html
@@ -20,7 +20,7 @@
             {% include 'base/carrousel.html' %}
         </section>
         <!-- SECCION DE CATEGORIAS DESTACADAS -->
-        <!- <section class="border border-warning-subtle text-bg-dark p-3">
+         <section class="border border-warning-subtle text-bg-dark p-3">
             <h2 style="">Destacados</h2>
             <div class="container text-center">
                 <div class="row gap-3 justify-content-center">
@@ -70,71 +70,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
-        <!-- Productos Herramientas -->
-        <!-- <section class="border border-warning-subtle text-bg-dark p-3">
-            <h2>Ruedas</h2>
-                <div class="container-fluid row gap-5 justify-content-center">
-                    {% for p in ruedas %}
-                    <div class="col-10 col-md-6 col-lg-2">
-                        <div class="card" style="width: auto;">
-                            <img src="{{ p.imagen.url }}" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ p.nom_producto }}</h5>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-        </section> -->
-        <!-- Productos Muebles-->
-        <!-- <section class="border border-warning-subtle text-bg-dark p-3">
-            <h2>Muebles</h2>
-                <div class="container-fluid row gap-5 justify-content-center">
-                    {% for p in muebles %}
-                    <div class="col-10 col-md-6 col-lg-2">
-                        <div class="card" style="width: auto;">
-                            <img src="{{ p.imagen.url }}" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ p.nom_producto }}</h5>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-        </section> -->
-        <!-- Productos Seguridad-->
-        <!-- <section class="border border-warning-subtle text-bg-dark p-3">
-            <h2>Seguridad</h2>
-                <div class="container-fluid row gap-5 justify-content-center">
-                    {% for p in seguridad %}
-                    <div class="col-10 col-md-6 col-lg-2">
-                        <div class="card" style="width: auto;">
-                            <img src="{{ p.imagen.url }}" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ p.nom_producto }}</h5>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-        </section> -->
-        <!-- Productos Proteccion-->
-        <!-- <section class="border border-warning-subtle text-bg-dark p-3">
-            <h2>Proteccion</h2>
-                <div class="container-fluid row gap-5 justify-content-center">
-                    {% for p in proteccion %}
-                    <div class="col-10 col-md-6 col-lg-2">
-                        <div class="card" style="width: auto;">
-                            <img src="{{ p.imagen.url }}" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ p.nom_producto }}</h5>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-        </section> -->
+        </section>
         {% include 'base/footer.html' %}
     </main>
     
