--- a/tallerApp/static/css/page.css
+++ b/tallerApp/static/css/page.css
@@ -24,9 +24,6 @@ main {
     background-color: rgb(31, 31, 31);
 }
 
-
-
-
 .formulario {
     text-align: center;
     width: 40%;
@@ -47,9 +44,7 @@ main {
 
 .cuadrado {
     width: 50%;
-    /* Ancho relativo al contenedor */
     background-color: lightblue;
-    /* Solo para visualizar */
 }
 
 .titulo-noSub {
@@ -68,41 +63,49 @@ main {
 }
 
 .footer {
-    padding: 80px 0;
+    padding: 40px 0;
+    background-color: #333;
+    color: white;
 }
 
 .footer-row {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .footer-links {
-    width: 25%;
-    margin: 0;
-    padding: 15px 15px;
+    width: 100%;
+    max-width: 200px;
+    margin: 10px;
+    padding: 15px;
     box-sizing: border-box;
-
 }
 
 .footer-links h4 {
     font-size: 20px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     font-weight: 500;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid white;
     padding-bottom: 10px;
     display: inline-block;
 }
 
 .footer-links ul {
     list-style: none;
+    padding: 0;
 }
 
 .footer-links ul li a {
     color: white;
-    font-size: 18px;
+    font-size: 16px;
     text-decoration: none;
     display: block;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+}
+
+.footer-links ul li a:hover {
+    text-decoration: underline;
 }
 
 .social-links a {
@@ -120,3 +123,15 @@ main {
     height: 40px;
 }
 
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+    .footer-row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-links {
+        width: 80%;
+        max-width: none;
+    }
+}
