--- a/tallerApp/templates/pages/carrito.html
+++ b/tallerApp/templates/pages/carrito.html
@@ -23,7 +23,7 @@
                             <div class="d-flex border border-warning-subtle text-bg-dark
                             col-12 col-md-8 col-lg-10">
                                 <div class="p-3">
-                                    <img src="{{ item.image }}" alt="">
+                                    <img src="{{ item.imagen }}"style="width: 150px;" alt="">
                                 </div>
                                 <div class="p-3">
                                     <div>
@@ -77,9 +77,10 @@
 
             </div>
         </section>
+        {% include 'base/footer.html' %}
     </main>
 
-    {% include 'base/footer.html' %}
+    
     
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
