--- a/tallerApp/templates/pages/prod_add.html
+++ b/tallerApp/templates/pages/prod_add.html
@@ -18,21 +18,13 @@
                     <form action="{% url 'prod_add' %}" method="POST" class="fort-floating" enctype="multipart/form-data">
                         {% csrf_token %}
 
-                        {% comment %} <div class="form-floating mb-3 w-50 mx-auto">
-                            <input type="number" class="form-control" id="id_prod" name="ID">
-                            <label for="ID">ID</label>
-                        </div> {% endcomment %}
                         <div class="form-floating mb-3 w-50 mx-auto">
                             <input type="text" class="form-control" id="nombre" name="nombre">
                             <label for="nombre">Nombre</label>
                         </div>
                         <div class="form-floating mb-3 w-50 mx-auto">
                             <select class="form-select" id="categoria" name="categoria">
-                                {% for tmp in categorias %}
-                                    <option value="{{tmp.id_categoria}}" {% if tmp.nombre_c == producto.id_categoria.categoria %}selected{% endif %}>
-                                        {{tmp.nombre_c}}
-                                    </option>
-                                {% endfor %} imagen
+                                <!-- Opciones de categorías -->
                             </select>
                             <label for="categoria">Categoria</label>
                         </div>
@@ -44,33 +36,29 @@
                             <input type="number" class="form-control" id="valor" name="valor">
                             <label for="valor" class="form-label">Valor</label>
                         </div>
-
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <input type="number" class="form-control" id="stock" name="stock">
                             <label for="stock" class="form-label">Cantidad</label>
                         </div>
-
                         <!-- <div class="form-floating mb-3 w-25 mx-auto">
                             <input type="file" class="form-control" id="imagen" name="imagen">
                             <label for="imagen" class="form-label">Imagen</label>
                         </div> -->
-
                         <div class="form-floating mb-3 w-50 mx-auto">
                             <input type="text" class="form-control" id="proveedor" name="proveedor">
-                            <label for="proveedor">proveedor</label>
+                            <label for="proveedor">Proveedor</label>
                         </div>
                         <div>
                             {% if mensaje %}
                             <div class="alert alert-success w-50 mx-auto">
-                                {{mensaje}}
+                                {{ mensaje }}
                             </div>
                             {% endif %}
                         </div>
                         <div>
-                            <button type="submit" class="btn btn-succes">Agregar Registro</button><br>
+                            <button type="submit" class="btn btn-success">Agregar Registro</button><br>
                             <a href="{% url 'inventario' %}"><button type="button" class="btn btn-primary mt-3">Volver</button></a>
                         </div>
-
                     </form>
                 </div>
             </div>
