--- a/tallerApp/templates/pages/index.html
+++ b/tallerApp/templates/pages/index.html
@@ -1,81 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/page.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-</head>
+    <link rel="stylesheet" href="{% static 'css/page.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
 
-<body>
-
+  <body>
     {% include 'base/header.html' %}
 
     <main>
-        <!-- ESTE ES EL CARRUSEL -->
-        <section class="border border-warning-subtle text-bg-dark p-3">
-            {% include 'base/carrousel.html' %}
-        </section>
-        <!-- SECCION DE CATEGORIAS DESTACADAS -->
-         <section class="border border-warning-subtle text-bg-dark p-3">
-            <h2 style="">Destacados</h2>
-            <div class="container text-center">
-                <div class="row gap-3 justify-content-center">
-
-                    <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-                        <div>
-                            <a class="titulo-noSub" href="">
-                                <div class="contenedor-item">
-                                    <img src="{% static 'images/bateria.webp' %}" style="width: 50px;"  alt="">
-                                    <h3>Baterias</h3>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-    
-                    <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-                        <div>
-                            <a class="titulo-noSub" href="">
-                                <div class="contenedor-item">
-                                    <img src="{% static 'images/frenos.jpg' %}" style="width: 50px;" alt="">
-                                    <h3>Frenos</h3>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-    
-                    <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-                        <div>
-                            <a class="titulo-noSub" href="">
-                                <div class="contenedor-item">
-                                    <img src="{% static 'images/Motores.webp' %}" style="width: 50px;" alt="">
-                                    <h3>Motores</h3>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-    
-                    <div class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
-                        <div>
-                            <a class="titulo-noSub" href="">
-                                <div class="contenedor-item">
-                                    <img src="{% static 'images/ruedas.webp' %}" style="width: 50px;" alt="">
-                                    <h3>Ruedas</h3>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+      <!-- ESTE ES EL CARRUSEL -->
+      <section class="border border-warning-subtle text-bg-dark p-3">
+        {% include 'base/carrousel.html' %}
+      </section>
+      <!-- SECCION DE CATEGORIAS DESTACADAS -->
+      <section class="border border-warning-subtle text-bg-dark p-3">
+        <h2 style="">Destacados</h2>
+        <div class="container text-center">
+          <div class="row gap-3 justify-content-center">
+            <div
+              class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded"
+            >
+              <div>
+                <a class="titulo-noSub" href="">
+                  <div class="contenedor-item">
+                    <img
+                      src="{% static 'images/bateria.webp' %}"
+                      style="width: 50px"
+                      alt=""
+                    />
+                    <h3>Baterias</h3>
+                  </div>
+                </a>
+              </div>
             </div>
-        </section>
-        {% include 'base/footer.html' %}
+
+            <div
+              class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded"
+            >
+              <div>
+                <a class="titulo-noSub" href="">
+                  <div class="contenedor-item">
+                    <img
+                      src="{% static 'images/frenos.jpg' %}"
+                      style="width: 50px"
+                      alt=""
+                    />
+                    <h3>Frenos</h3>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div
+              class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded"
+            >
+              <div>
+                <a class="titulo-noSub" href="">
+                  <div class="contenedor-item">
+                    <img
+                      src="{% static 'images/Motores.webp' %}"
+                      style="width: 50px"
+                      alt=""
+                    />
+                    <h3>Motores</h3>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div
+              class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded"
+            >
+              <div>
+                <a class="titulo-noSub" href="">
+                  <div class="contenedor-item">
+                    <img
+                      src="{% static 'images/ruedas.webp' %}"
+                      style="width: 50px"
+                      alt=""
+                    />
+                    <h3>Ruedas</h3>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      {% include 'base/footer.html' %}
     </main>
-    
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</body>
-
+  </body>
 </html>
