--- a/tallerApp/templates/pages/registro.html
+++ b/tallerApp/templates/pages/registro.html
@@ -1,65 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/page.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-</head>
+    <link rel="stylesheet" href="{% static 'css/page.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
 
-<body>
-
+  <body>
     {% include 'base/header.html'%}
     <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 shadow-lg mx-auto text-center p-3">
-                    <form action="{% url 'registro' %}" method="POST">
-                        {% csrf_token %}
-                        <h2>Registro</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 shadow-lg mx-auto text-center p-3">
+            <form action="{% url 'registro' %}" method="POST">
+              {% csrf_token %}
+              <h2>Registro</h2>
 
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <input type="text" class="form-control" id="nombre" name="nombre" placeholder="">
-                            <label for="nombre" class="form-label">Nombre</label>
-                        </div>
+              <div class="form-floating mb-3 w-25 mx-auto">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="nombre"
+                  name="nombre"
+                  placeholder=""
+                />
+                <label for="nombre" class="form-label">Nombre</label>
+              </div>
 
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <input type="text" class="form-control" id="email" name="email" placeholder="example@example.com">
-                            <label for="email" class="form-label">
-                                email
-                            </label>
-                        </div>
+              <div class="form-floating mb-3 w-25 mx-auto">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="email"
+                  name="email"
+                  placeholder="example@example.com"
+                />
+                <label for="email" class="form-label"> email </label>
+              </div>
 
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <input type="number" class="form-control" id="fono" name="fono" placeholder="">
-                            <label for="fono" class="form-label">Teléfono</label>
-                        </div>
+              <div class="form-floating mb-3 w-25 mx-auto">
+                <input
+                  type="number"
+                  class="form-control"
+                  id="fono"
+                  name="fono"
+                  placeholder=""
+                />
+                <label for="fono" class="form-label">Teléfono</label>
+              </div>
 
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <input type="password" class="form-control" id="password" name="password" placeholder="">
-                            <label for="password" class="form-label">Contraseña</label>
-                        </div>
-                        {% if mensaje %}
-                        <div class='{{design}}'>
-                            {{mensaje}}
-                        </div>
-                        {% endif%}
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <button type="submit" class="btn btn-primary">Registrar</button>
-                        </div>
-                    </form>
-
-                </div>
-            </div>
+              <div class="form-floating mb-3 w-25 mx-auto">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  name="password"
+                  placeholder=""
+                />
+                <label for="password" class="form-label">Contraseña</label>
+              </div>
+              {% if mensaje %}
+              <div class="{{design}}">{{mensaje}}</div>
+              {% endif%}
+              <div class="form-floating mb-3 w-25 mx-auto">
+                <button type="submit" class="btn btn-primary">Registrar</button>
+              </div>
+            </form>
+          </div>
         </div>
+      </div>
     </main>
     {% include 'base/footer.html'%}
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</body>
-
+  </body>
 </html>
