ñau casi final 2.0

--- a/tallerApp/templates/pages/index.html
+++ b/tallerApp/templates/pages/index.html
@@ -27,8 +27,7 @@
         <div class="container text-center">
           <div class="row gap-3 justify-content-center">
             <div
-              class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded"
-            >
+              class="col-10 col-md-4 col-lg-2 shadow-sm p-3 mb-5 bg-body-tertiary rounded">
               <div>
                 <a class="titulo-noSub" href="">
                   <div class="contenedor-item">
@@ -69,8 +68,7 @@
                     <img
                       src="{% static 'images/Motores.webp' %}"
                       style="width: 50px"
-                      alt=""
-                    />
+                      alt=""/>
                     <h3>Motores</h3>
                   </div>
                 </a>
