--- a/tallerApp/templates/pages/catalogo.html
+++ b/tallerApp/templates/pages/catalogo.html
@@ -17,7 +17,7 @@
     {% include 'base/header.html' %}
 
     <main>
-      <!-- Productos Herramientas -->
+      <!-- Productos -->
       <section class="border border-warning-subtle text-bg-dark p-3">
         <h2>Baterias</h2>
         <div class="container-fluid row gap-5 justify-content-center">
