--- a/tallerApp/templates/pages/login_emp.html
+++ b/tallerApp/templates/pages/login_emp.html
@@ -1,62 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LoginEmp</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/page.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="{% static 'css/page.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
     {% include 'base/header.html'%}
     <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 shadow-lg mx-auto text-center p-3">
-                    <form action="{% url 'login_emp' %}" method="POST">
-                        {% csrf_token %}
-                        <h2>Acceso Empleado</h2>
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <input type="text" class="form-control" id="email" name="email" placeholder="">
-                            <label for="email" class="form-label">Correo</label>
-                        </div>
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <input type="password" class="form-control" id="password" name="password" placeholder="">
-                            <label for="password" class="form-label">Contraseña</label>
-                        </div>
-                        {% if mensaje %}
-                        <div class='{{design}}'>
-                            {{mensaje}}
-                        </div>
-                        {% endif%}
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <a href="{% url 'registro' %}">
-                                <button class="btn btn-secondary">
-                                    Registrar
-                                </button>
-                            </a>
-                        </div>
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <button type="submit" class="btn btn-primary">Ingresar</button>
-                        </div>
-                    </form>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 shadow-lg mx-auto text-center p-3">
+            <form action="{% url 'login_emp' %}" method="POST">
+              {% csrf_token %}
+              <h2>Acceso Empleado</h2>
+              <div class="form-floating mb-3 w-25 mx-auto">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="email"
+                  name="email"
+                  placeholder=""
+                />
+                <label for="email" class="form-label">Correo</label>
+              </div>
+              <div class="form-floating mb-3 w-25 mx-auto">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  name="password"
+                  placeholder=""
+                />
+                <label for="password" class="form-label">Contraseña</label>
+              </div>
+              {% if mensaje %}
+              <div class="{{design}}">{{mensaje}}</div>
+              {% endif%}
+              <div class="form-floating mb-3 w-25 mx-auto">
+                <a href="{% url 'registro' %}">
+                  <button class="btn btn-secondary">Registrar</button>
+                </a>
+              </div>
+              <div class="form-floating mb-3 w-25 mx-auto">
+                <button type="submit" class="btn btn-primary">Ingresar</button>
+              </div>
+            </form>
 
-                    <div class="form-floating mb-3 w-25 mx-auto">
-                        <a href="{% url 'login' %}">
-                            <button class="btn btn-secondary">
-                                Login Cliente
-                            </button>
-                        </a>
-                    </div>
-
-                </div>
+            <div class="form-floating mb-3 w-25 mx-auto">
+              <a href="{% url 'login' %}">
+                <button class="btn btn-secondary">Login Cliente</button>
+              </a>
             </div>
+          </div>
         </div>
+      </div>
     </main>
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</body>
+  </body>
 </html>
