--- a/tallerApp/templates/pages/success.html
+++ b/tallerApp/templates/pages/success.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exito</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/page.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="{% static 'css/page.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
     {% include 'base/header.html'%}
     <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 border border-warning-subtle text-bg-dark p-3">
-                    <h2>Detalle de Transaccion</h2>
-                    <p>Transaccion realizada</p>
-                    {% if result %}
-                    <h2>Detalles de la Transacción</h2>
-                    <ul>
-                        <li><strong>Estado:</strong> {{ result.status }}</li>
-                        <li><strong>Orden de compra:</strong> {{ result.buy_order }}</li>
-                        <li><strong>Sesión:</strong> {{ result.session_id }}</li>
-                        <li><strong>Monto:</strong> {{ result.amount }}</li>
-                        <li><strong>Fecha de transacción:</strong> {{ result.transaction_date }}</li>
-                    </ul>
-                    {% endif %}
-                </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 border border-warning-subtle text-bg-dark p-3">
+            <h2>Detalle de Transaccion</h2>
+            <p>Transaccion realizada</p>
+            {% if result %}
+            <h2>Detalles de la Transacción</h2>
+            <ul>
+              <li><strong>Estado:</strong> {{ result.status }}</li>
+              <li><strong>Orden de compra:</strong> {{ result.buy_order }}</li>
+              <li><strong>Sesión:</strong> {{ result.session_id }}</li>
+              <li><strong>Monto:</strong> {{ result.amount }}</li>
+              <li>
+                <strong>Fecha de transacción:</strong> {{
+                result.transaction_date }}
+              </li>
+            </ul>
+            {% endif %}
+          </div>
         </div>
+      </div>
     </main>
-    
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</body>
+  </body>
 </html>
