ñau final ya valio

--- a/tallerApp/templates/pages/login_emp.html
+++ b/tallerApp/templates/pages/login_emp.html
@@ -20,7 +20,7 @@
           <div class="col-md-8 shadow-lg mx-auto text-center p-3">
             <form action="{% url 'login_emp' %}" method="POST">
               {% csrf_token %}
-              <h2>Acceso Empleado</h2>
+              <h2 style="color: aliceblue;">Acceso Empleado</h2>
               <div class="form-floating mb-3 w-25 mx-auto">
                 <input
                   type="text"
